Fixed Logo, Fixed box resizing, Fixed text wrapping in footer, Fixed extra space on right side

--- a/App/static/css/main.css
+++ b/App/static/css/main.css
@@ -7,6 +7,7 @@ body {
   display: block;
   color: #000!important;
   background: linear-gradient(90deg, #ffd89b 0%, #8E978B 50%, #19547b 77%)!important;
+
 }
 
 div {
@@ -198,7 +199,7 @@ footer {
 }
 
 .text-muted{
-  white-space: nowrap;
+  display:inline-block;
 }
 
 footer p {
@@ -409,8 +410,42 @@ footer p {
   align-items: center;
 }
 
+#cbody{
+display:flex;
+position: static;
+padding-top: 10px;
+padding-bottom: 10px;
+
+align-items:center;
+justify-items:stretch;
+
+height: 30px;
+
+
+}
+
+#logo{
+font-style: italic;
+font-family:Helvetica;
+font-size:250px;
+line-height=50;
+color:#ffffff;
+  text-shadow: 0 2px 1px #747474FF,
+       -1px 3px 1px #7a7a7aFF,
+      -2px 5px 1px #838383E6,
+      -3px 7px 1px #8e8e8eCC,
+      -4px 9px 1px #9f9f9fB3,
+      -5px 11px 1px #a7a7a799,
+      -6px 13px 1px #b6b6b680,
+      -7px 15px 1px #c8c8c866,
+      -8px 17px 1px #d2d2d24D,
+      -9px 19px 1px #e6e6e633,
+      -10px 21px 1px #efefef1A;
+}
+
 .container-fluid {
   padding-right: 0% !important;
   padding-left: 0% !important;
+  overflow: hidden;
 }
 
